--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
+    "start": "next start -p $PORT",
     "build": "next build",
     "export": "next export --outdir=./docs",
     "format": "prettier-stylelint --quiet --write ./styles/global.scss",
