criteria in progress

--- a/data/criteria.yaml
+++ b/data/criteria.yaml
@@ -2,6 +2,11 @@
 1.1.1:
   title: 非テキストコンテンツに関する達成基準
   level: A
+  techs:
+    - H2
+    - H30
 2.4.4:
   title: 文脈におけるリンクの目的に関する達成基準
   level: A
+  techs:
+    - H30
