--- a/data/techs.yaml
+++ b/data/techs.yaml
@@ -1,5 +1,7 @@
 ---
 H2:
   title: 同じリソースに対して隣接する画像とテキストリンクを結合する
+  target: a要素内にあるimg要素のalt属性
 H30:
   title: a 要素のリンクの目的を説明するリンクテキストを提供する
+  target: a要素内に単一のimg要素があるケース
