--- a/data/results.yaml
+++ b/data/results.yaml
@@ -1,19 +1,70 @@
 ---
-- id: 0001
+- id: 1
   test: 0001-01
-  user_agent: macOS Mojave 10.14.2 + Firefox 64.0 + VoiceOver
-  judgment: ○
-  procedure: リンク「ウェブアクセシビリティ基盤委員会公開サイト」にVoiceOverキー+右矢印キーで移動した。
+  os: macOS Mojave 10.14.2
+  user_agent: Firefox 64.0
+  assistive_tech: VoiceOver
+  assistive_tech_config: 支援技術に対する追加の設定の例
+  contents:
+    - expected: 期待する結果テスト
+      procedure: リンク「ウェブアクセシビリティ基盤委員会公開サイト」にVoiceOverキー+右矢印キーで移動した。
+      actual: 得られた結果テスト
+      judgment: 満たしている
   comment: (作業コメント テスト結果ID 0003)
-- id: 0002
+- id: 2
   test: 0001-01
-  user_agent: Windows 10 + NVDA
-  judgment: ○
-  procedure: 手順のテスト
+  os: Windows 10
+  user_agent: Firefox
+  assistive_tech: NVDA
+  contents:
+    - expected: 期待する結果テスト
+      procedure: 手順のテスト
+      actual: 得られた結果テスト
+      judgment: 満たしている
   comment: コメントのテスト
-- id: 0003
+- id: 3
   test: 0001-02
-  user_agent: Windows 10 + NVDA
-  judgment: ○
-  procedure: 手順のテスト2
+  os: Windows 10
+  user_agent: Firefox
+  assistive_tech: NVDA
+  contents:
+    - expected: 期待する結果テスト
+      procedure: 手順のテスト2
+      actual: 得られた結果テスト
+      judgment: 満たしている
   comment: コメントのテスト2
+- id: 79
+  test: 0001-02
+  os: Windows 10 Home Version 1809, Build 17763.195
+  user_agent: Firefox 64.0
+  assistive_tech: NVDA 2018.4jp
+  contents:
+    - expected: アイコン画像の代替テキストは何も読み上げられず、リンクテキスト “ウェブアクセシビリティ基盤委員会公開サイト” のみが読み上げられる
+      procedure: リンク「ウェブアクセシビリティ基盤委員会公開サイト」に下矢印キーで移動した。
+      actual: アイコン画像の代替テキストは何も読み上げられず、リンクテキスト “ウェブアクセシビリティ基盤委員会公開サイト” のみが読み上げられた。
+      judgment: 満たしている
+- id: 151
+  test: 0001-02
+  os: macOS 10.13.6
+  user_agent: Safari 12.0.2
+  assistive_tech: VoiceOver
+  contents:
+    - expected: (視覚閲覧環境) 代替テキストやコンテンツと誤解されるようなファイル名や URL などが表示されない
+      procedure: （視覚閲覧環境）ブラウザを画像非表示に設定変更し、表示内容を確認した
+      actual: （視覚閲覧環境）リンクテキスト「ウェブアクセシビリティ基盤委員会公開サイト」のみが表示され、画像のファイル名や URL 等は表示されなかった。
+      judgment: 満たしている
+    - expected: (音声閲覧環境) アイコン画像の代替テキストは何も読み上げられず、リンクテキスト “ウェブアクセシビリティ基盤委員会公開サイト” のみが読み上げられる
+      procedure: （音声閲覧環境）ページ画面でControl+shift+option+↓で入った
+      actual: （音声閲覧環境）リンクテキスト「ウェブアクセシビリティ基盤委員会公開サイト」のみ読み上げられた。
+      judgment: 満たしている
+- id: 165
+  test: 0002-02
+  os: Windows10 Home Version 1809
+  user_agent: Google Chrome 71.0.3578.98（Official Build） （64 ビット）
+  assistive_tech: NVDA 2018.4JP
+  assistive_tech_config:
+  contents:
+    - expected: リンクテキストとアイコン画像の代替テキストが続けて “施設ご利用の手引き PDFファイル” と読み上げられる
+      procedure: 下矢印キーでページの内容を読み上げた。
+      actual: 「リンク施設ご利用の手引き画像PDFファイル」と読み上げられた。
+      judgment: 満たしている
