--- a/data/criteria.yaml
+++ b/data/criteria.yaml
@@ -4,11 +4,15 @@
   level: A
   techs:
   - H2
+  - H24
   - H30
   - H36
   - H37
+  - H44
+  - H45
+  - H65
   - H67
-  - G73
+  # - G73
 # 1.2.1:
 #   title: 音声のみ及び映像のみ (収録済)
 #   level: A
@@ -49,9 +53,21 @@
   title: 情報及び関係性
   level: A
   techs:
-  - F2
-  - G115
+  # - F2
+  # - G115
+  - H39
+  - H42
+  - H43
+  - H44
+  - H48
   - H49
+  - H51
+  - H63
+  - H65
+  - H71
+  # - H73
+  - H85
+  - H97
 # 1.3.2:
 #   title: 意味のある順序
 #   level: A
@@ -72,36 +88,50 @@
   title: ブロックスキップ
   level: A
   techs:
+  - H64
   - H69
-  - ARIA11
+  - H70
+  # - ARIA11
 2.4.2:
   title: ページタイトル
   level: A
   techs:
-  - G88
+  # - G88
   - H25
 2.4.3:
   title: フォーカス順序
   level: A
   techs:
-  - F44
-  - G59
+  # - F44
+  # - G59
+  - H4
 2.4.4:
   title: リンクの目的（コンテクスト内）
   level: A
   techs:
-  - G91
+  # - G91
+  - H24
+  - H30
+  - H33
   - H77
+  - H78
+  - H79
+  - H80
+  - H81
 2.4.9:
   title: リンクの目的 (リンクのみ)
   level: AAA
   techs:
-  - G91
+  # - G91
+  - H24
+  - H30
+  - H33
 2.4.10:
   title: セクション見出し
   level: A
   techs:
-  - G141
+  # - G141
+  - H69
 3.1.1:
   title: ページの言語
   level: A
@@ -111,17 +141,24 @@
   title: 入力時
   level: A
   techs:
-  - F36
-  - F37
-  - G13
+  # - F36
+  # - F37
+  # - G13
+  - H32
 3.3.2:
   title: ラベル又は説明
   level: A
-  techs: []
+  techs:
+  - H44
+  - H65
+  - H71
 4.1.2:
   title: 名前・役割及び値
   level: A
   techs:
-  - F59
-  - F68
-  - H91
+  # - F59
+  # - F68
+  - H44
+  - H64
+  - H65
+  # - H91
