--- a/data/results.yaml
+++ b/data/results.yaml
@@ -2334,7 +2334,7 @@
   comment: null
 - id: 139
   test: 0001-01
-  os: 'macOS 10.14.2 '
+  os: macOS 10.14.2
   user_agent: Google Chrome 71.0.3578.98
   assistive_tech: VoiceOver
   assistive_tech_config: null
@@ -2347,7 +2347,7 @@
   comment: null
 - id: 140
   test: 0001-02
-  os: 'macOS 10.14.2 '
+  os: macOS 10.14.2
   user_agent: Google Chrome 71.0.3578.98
   assistive_tech: VoiceOver
   assistive_tech_config: null
