address waic/as_info#35

--- a/data/results.yaml
+++ b/data/results.yaml
@@ -3557,7 +3557,7 @@
   - expected: (視覚閲覧環境) リンク画像の代替テキスト “ウェブアクセシビリティ基盤委員会” が表示される
     procedure: '(視覚閲覧環境) 表示 : ブラウザの設定を変更して画像非表示にし、表示内容を確認'
     actual: (視覚閲覧環境) 代替テキストは表示されず真っ白です。
-    judgment: 満たしている
+    judgment: 満たしていない
   - expected: (音声閲覧環境) リンク画像の代替テキスト “ウェブアクセシビリティ基盤委員会” が読み上げられる
     procedure: （音声閲覧環境） Tab キーで移動した。
     actual: (音声閲覧環境)「りんく　イメージ　アクセシビリティ基盤委員会」と読まれました
