--- a/data/results.yaml
+++ b/data/results.yaml
@@ -3721,28 +3721,28 @@
       マウス操作もキーボード操作もブラウザの左下に遷移先のURLのみ表示された。'
     judgment: 満たしている
   comment: null
-- id: 200
-  test: 0004-05
-  os: macOS 10.14.2
-  user_agent: Google Chrome 71.0.3578.98
-  assistive_tech: VoiceOver
-  assistive_tech_config: null
-  contents:
-  - expected: '(視覚閲覧環境) :
+# - id: 200
+#   test: 0004-05
+#   os: macOS 10.14.2
+#   user_agent: Google Chrome 71.0.3578.98
+#   assistive_tech: VoiceOver
+#   assistive_tech_config: null
+#   contents:
+#   - expected: '(視覚閲覧環境) :
 
-      リンクであることを判別できる何らかの手段が提供されている'
-    procedure: '(視覚閲覧環境) :
+#       リンクであることを判別できる何らかの手段が提供されている'
+#     procedure: '(視覚閲覧環境) :
 
-      マウス操作 : 各 area 要素にマウスポインタを重ね、挙動を確認
+#       マウス操作 : 各 area 要素にマウスポインタを重ね、挙動を確認
 
-      キーボード操作 : 各 area 要素にフォーカスを移動し、挙動を確認'
-    actual: ' (視覚閲覧環境) :
+#       キーボード操作 : 各 area 要素にフォーカスを移動し、挙動を確認'
+#     actual: ' (視覚閲覧環境) :
 
-      マウス操作では、リンクを判別できる視覚効果がなかった。
+#       マウス操作では、リンクを判別できる視覚効果がなかった。
 
-      キーボード操作はフォーカスの線が表示される'
-    judgment: 満たしていない
-  comment: こちらが正しいです。
+#       キーボード操作はフォーカスの線が表示される'
+#     judgment: 満たしていない
+#   comment: こちらが正しいです。
 - id: 201
   test: 0004-05
   os: macOS 10.14.2
