change column order

--- a/data/results.yaml
+++ b/data/results.yaml
@@ -3966,9 +3966,7 @@
 
       期待される結果のように、該当文のみ読み上げられた'
     judgment: 満たしている
-  comment: '使用機種：FMVWC2U28T
-
-    タッチ対応 スーパーファイン液晶'
+  comment: null  # '使用機種：FMVWC2U28T タッチ対応 スーパーファイン液晶'
 - id: 214
   test: 0015-03
   os: macOS 10.13.6
@@ -4280,7 +4278,7 @@
 
       該当文「ウェブアクセシビリティ基盤委員会公開サイト」のみ読み上げられた。'
     judgment: 満たしている
-  comment: 機種名：FMVWC2U タッチ対応 スーパーファイン液晶
+  comment: null  # 機種名：FMVWC2U タッチ対応 スーパーファイン液晶
 - id: 231
   test: 0004-01
   os: Windows 10 Pro 1803
