--- a/data/results.yaml
+++ b/data/results.yaml
@@ -1113,18 +1113,19 @@
     actual: 各 area 要素の alt 属性に指定した代替テキストは表示されなかった。
     judgment: 満たしていない
   comment: null
-# - id: 63
-#   test: 0004-04
-#   os: macOS 10.14.2
-#   user_agent: Firefox 64.0
-#   assistive_tech: null
-#   assistive_tech_config: null
-#   contents:
-#   - expected: 各リンク先へ遷移する
-#     procedure: ブラウザを画像非表示に設定変更し、表示内容を確認した。
-#     actual: area 要素が表示されないのでリンク先へ遷移することはできなかった。
-#     judgment: 満たしていない
-#   comment: img要素の代替テキストが青字（下線なし）で表示されています。
+- id: 63
+  test: 0004-04
+  os: macOS 10.14.2
+  user_agent: Firefox 64.0
+  assistive_tech: null
+  assistive_tech_config: null
+  contents:
+  - expected: 各リンク先へ遷移する
+    procedure: ブラウザを画像非表示に設定変更し、表示内容を確認した。
+    actual: area 要素が表示されないのでリンク先へ遷移することはできなかった。
+    judgment: 満たしていない
+  comment: img要素の代替テキストが青字（下線なし）で表示されています。
+  reviewer_comment: '[WAIC注] テスト手順に問題があり、適切に判定できていません。'
 - id: 64
   test: 0005-01
   os: macOS 10.14.2
