--- a/data/results.yaml
+++ b/data/results.yaml
@@ -1150,27 +1150,28 @@
     actual: リンク画像の代替テキスト “ウェブアクセシビリティ基盤委員会” が表示された。
     judgment: 満たしている
   comment: null
-# - id: 66
-#   test: 0006-03
-#   os: macOS 10.14.2
-#   user_agent: Firefox 64.0
-#   assistive_tech: null
-#   assistive_tech_config: null
-#   contents:
-#   - expected: "次の 1. 〜 2. をすべて満たしている\n1. リンク “Home” に title 属性による補足説明があることが分かるように何らかの表示がされる\
-#       \ \n2. ツールチップで title 属性値 “ウェブアクセシビリティ基盤委員会公式サイト” が表示される"
-#     procedure: 'ブラウザを画像非表示に設定変更し、表示内容を確認した。
+- id: 66
+  test: 0006-03
+  os: macOS 10.14.2
+  user_agent: Firefox 64.0
+  assistive_tech: null
+  assistive_tech_config: null
+  contents:
+  - expected: "次の 1. 〜 2. をすべて満たしている\n1. リンク “Home” に title 属性による補足説明があることが分かるように何らかの表示がされる\
+      \ \n2. ツールチップで title 属性値 “ウェブアクセシビリティ基盤委員会公式サイト” が表示される"
+    procedure: 'ブラウザを画像非表示に設定変更し、表示内容を確認した。
 
-#       リンクにマウスオーバーをして表示内容を確認した。
+      リンクにマウスオーバーをして表示内容を確認した。
 
-#       リンクにTabキーで移動して表示内容を確認した。'
-#     actual: 'リンク “Home” に title 属性による補足説明があることが分かるような表示はなかった。
+      リンクにTabキーで移動して表示内容を確認した。'
+    actual: 'リンク “Home” に title 属性による補足説明があることが分かるような表示はなかった。
 
-#       リンク “Home” にマウスオーバーすると、ツールチップ “ウェブアクセシビリティ基盤委員会公式サイト” が表示された。
+      リンク “Home” にマウスオーバーすると、ツールチップ “ウェブアクセシビリティ基盤委員会公式サイト” が表示された。
 
-#       リンク “Home” にフォーカスを移動しても、title属性値は表示されなかった。'
-#     judgment: 満たしていない
-#   comment: null
+      リンク “Home” にフォーカスを移動しても、title属性値は表示されなかった。'
+    judgment: 満たしていない
+  comment: null
+  reviewer_comment: '[WAIC注] テスト手順に問題があり、適切に判定できていません。'
 - id: 67
   test: 0007-01
   os: macOS 10.14.2
