--- a/data/results.yaml
+++ b/data/results.yaml
@@ -3577,24 +3577,25 @@
     actual: img の alt は表示されるが、area の alt は表示されませんでした。
     judgment: 満たしていない
   comment: null
-# - id: 192
-#   test: 0004-03
-#   os: macOS 10.14.2
-#   user_agent: Google Chrome 71.0.3578.98
-#   assistive_tech: VoiceOver
-#   assistive_tech_config: null
-#   contents:
-#   - expected: '(音声閲覧環境) :
+- id: 192
+  test: 0004-03
+  os: macOS 10.14.2
+  user_agent: Google Chrome 71.0.3578.98
+  assistive_tech: VoiceOver
+  assistive_tech_config: null
+  contents:
+  - expected: '(音声閲覧環境) :
 
-#       各 area 要素の alt 属性に指定した代替テキスト “4F 雑貨 書籍” “3F 衣料品” “2F お菓子 その他食品” “1F 生鮮食品” が読み上げられる。'
-#     procedure: '(音声閲覧環境) :
+      各 area 要素の alt 属性に指定した代替テキスト “4F 雑貨 書籍” “3F 衣料品” “2F お菓子 その他食品” “1F 生鮮食品” が読み上げられる。'
+    procedure: '(音声閲覧環境) :
 
-#       各 area 要素を読み上げ、内容を確認。'
-#     actual: 'area は読み上げられませんでした。
+      各 area 要素を読み上げ、内容を確認。'
+    actual: 'area は読み上げられませんでした。
 
-#       「デパートのフロアガイド。各階について詳しくお知りになりたい場合は各階をクリックしてください。」の部分を2回読んだあとに「店舗へのアクセスにつきましては~」うつっていきました。'
-#     judgment: 満たしていない
-#   comment: null
+      「デパートのフロアガイド。各階について詳しくお知りになりたい場合は各階をクリックしてください。」の部分を2回読んだあとに「店舗へのアクセスにつきましては~」うつっていきました。'
+    judgment: 満たしていない
+  comment: null
+  reviewer_comment: '[WAIC注] 再テストを行いましたが、本テスト結果と同じ結果は得られませんでした。'
 - id: 193
   test: 0006-03
   os: macOS 10.13.6
